@@ -1,12 +1,6 @@
 package syafa.java.hackerrank.DataStructures.Stacks;
 import java.io.*;
-import java.math.*;
-import java.security.*;
-import java.text.*;
 import java.util.*;
-import java.util.concurrent.*;
-import java.util.function.*;
-import java.util.regex.*;
 import java.util.stream.*;
 import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
@@ -56,7 +50,7 @@ class Result
             }
             else if (Integer.parseInt(operations.get(i)) == 2)
             {
-                getMaxResult.removeLast();
+                getMaxResult.remove(getMaxResult.size() - 1);
             }
             else if (Integer.parseInt(operations.get(i)) == 3)
             {
